# youkoso-auth

./: Cargo.toml  Dockerfile  README.md  diesel.toml  fly.toml
.github/workflows/: fly-deploy.yml
migrations/2024-04-24-120723_create_users/: down.sql  up.sql
migrations/2024-04-24-124345_create_enum_users/: up.sql
migrations/2024-05-10-053846_create_tokens/: up.sql
migrations/2024-05-10-105311_alter_tokens_status/: up.sql
migrations/2024-05-11-083301_alter_user_role_not_null/: up.sql
src/: main.rs
src/models/: mod.rs  user.rs
src/models/db/: schema.rs
src/models/db/entity/: mod.rs  token_schema.rs  user_schema.rs
src/models/enumeration/: user_type.rs
src/models/user/: director.rs  mod.rs
src/models/user/builder/: user_builder.rs
src/models/user/model/: profile.rs  user.rs
src/modules/: mod.rs
src/modules/authentication/: controller.rs  mod.rs  repository.rs  service.rs
src/modules/authentication/dto/: login.rs  logout.rs  register.rs  verify.rs
src/modules/common/: jwt_utils.rs
src/modules/profile/: controller.rs  repository.rs  service.rs
src/modules/profile/dto/: create.rs
src/tests/auth/: mod.rs  model_test.rs  repository_test.rs
src/utils/: config.rs  error.rs  mod.rs  router.rs
