[package]
name = "youkoso-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-diesel = { version = "0.6.0", features = ["postgres"] }
diesel = { version = "2.1.6", features = ["postgres", "chrono"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.0"
nanoid = "0.4.0"
serde = "1.0.198"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
