[package]
name = "youkoso-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["macros", "tracing"] }
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-diesel = { version = "0.6.0", features = ["postgres"] }
diesel = { version = "2.1.6", features = ["postgres", "chrono"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.0"
jsonwebtoken = "9.3.0"
nanoid = "0.4.0"
serde = "1.0.198"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.18.1", features = ["derive"] }
